# Copyright 2022 SkyAPM
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "SkyAPM-php-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Yanlong He <heyanlong@apache.org>"]

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
prost-derive = "0.8.0"
tokio = { version = "1", features = ["full"] }
gethostname = "0.2.3"
local-ip-address = "0.4.4"
uuid = { version = "1.0.0", features = ["v4"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
futures-util = "0.3.21"
rand = "0.8.5"
log = "0.4.1"
anyhow = "1.0.57"
ipc-channel = "0.16.0"
simplelog = "0.12.0"


[build-dependencies]
tonic-build = "0.5.2"
cbindgen = "0.23.0"

[lib]
name = "sky_core_report"
crate-type = ["staticlib"]
path = "src/sky_core_report.rs"
